depends_compile_tests/tests/fail/derive/value/enum.rs
use depends::derives::Value;

#[derive(Value)]
#[depends(unhashable)]
enum Foo {
    Bar,
}

fn main() {}
