depends_compile_tests/tests/fail/derive/value/enum.stderr
error: expected `struct`
 --> tests/fail/derive/value/enum.rs:5:1
  |
5 | enum Foo {
  | ^^^^
